# Task-Managment-API

./: README.md
.claude/skills/fastapi/: README.md  SKILL.md
.claude/skills/fastapi/assets/starter-template/: .env.example  .gitignore  requirements.txt
.claude/skills/fastapi/assets/starter-template/app/: main.py
.claude/skills/fastapi/references/: advanced.md  authentication.md  basics.md  database.md  deployment.md  models-validation.md  testing.md
.claude/skills/gmail-reply/: README.md  SKILL.md
.claude/skills/gmail-reply/references/: gmail-api.md
.claude/skills/pytest/: README.md  SKILL.md
.claude/skills/pytest/references/: ci_cd.md  conftest_templates.md  fastapi_testing.md  patterns.md  plugins.md  tdd.md  troubleshooting.md
.claude/skills/pytest/scripts/: check_coverage.py  generate_tests.py  run_tests.py
.claude/skills/sqlmodel/: README.md  SKILL.md
.claude/skills/sqlmodel/references/: async.md  basics.md  fastapi-integration.md  migrations.md  relationships.md
.claude/skills/task-management-api/: SKILL.md
.claude/skills/task-management-api/assets/task-management-api/: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/task-management-api/assets/task-management-api/app/: database.py  main.py
.claude/skills/task-management-api/assets/task-management-api/app/models/: __init__.py  task.py
.claude/skills/task-management-api/assets/task-management-api/app/routers/: tasks.py
.claude/skills/task-management-api/assets/task-management-api/tests/: conftest.py  test_tasks.py
(+5 files in other folders)
